# scallion-vocab

./: Containerfile  README.md
gui/: Cargo.toml  Dioxus.toml
gui/android/app/src/main/kotlin/dev/dioxus/main/: MainActivity.kt  WryActivity.kt
gui/android/app/src/main/res/drawable/: ic_launcher_background.xml
gui/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
gui/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
gui/src/: css.rs  db.rs  licenses.rs  logging.rs  main.rs  model.rs
quizlet_scraper/: Cargo.toml
quizlet_scraper/src/: error.rs  lib.rs  quizlet_scraper_html.rs  quizlet_scraper_url.rs
scripts/: build-android.sh  env.txt  rebuild-container.sh
scripts/lib/: common.sh  patch-android.sh  patch-chrome-client.py  patch-manifest.py
