[package]
name = "scallion-vocab"
version = "1.2.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["mobile"] }
dioxus-desktop = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
url = "2"
percent-encoding = "2"
fastrand = "2"
fsrs = "6"
tokio = { version = "1", features = ["time"] }

# --- Quizlet scraper library ---
quizlet_scraper = { path = "../quizlet_scraper" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
