[package]
name = "quizlet_scraper"
version = "0.1.0"
edition = "2021"
description = "A minimal, embeddable Quizlet flashcard scraper (term/definition only)."
license = "MIT"
publish = false

[lib]
name = "quizlet_scraper"
path = "src/lib.rs"

[dependencies]
# --- JSON parsing (Quizlet embeds the card data as doubly-encoded JSON) ---
serde_json = "1"

# --- Lightweight regex for locating the embedded JSON payload in the HTML ---
regex = "1"

# --- Ergonomic error types ---
thiserror = "2"

# --- URL parsing for the deck-ID extractor ---
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
